<resources>
    <string name="app_name">Rig Kontrol</string>
    <string name="salvar">SAVE</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="options">OPTIONS</string>
    <string name="midi_channel">MIDI CHANNEL</string>
    <string name="connect">CONNECT</string>
    <string name="offline">Offline</string>
    <string name="connection">CONNECTION</string>
    <string name="usb_status">USB STATUS</string>
    <string name="kontroller">KONTROLLER</string>
    <string name="pedal_sensivity">PEDAL SENSIVITY</string>
    <string name="close_warning">Exiting the application without saving changes will result in the loss of all unsaved data. Do you really want to close the Rig Kontroller?</string>
    <string name="not_midi_suported">Not Supported</string>
    <string name="online">ONLINE</string>
    <string name="loading">Loading</string>
    <string name="erro_permission">Cannot procced without READ and WRITE permition. Closing in 5 sec.</string>
    <string name="premission_granted">Permissions Granted</string>
    <string name="check_dirs">Checking Directories</string>
    <string name="preset_rename">PRESET RENAME</string>
    <string name="cant_make_preset_directory">Cannot make Preset save directory. Closing in 5 secs.</string>
    <string name="loading_sucessfully">Loading Successfully</string>
    <string name="open_preset">OPEN PRESET</string>
    <string name="saved_sucess">Preset saved successfully.</string>
    <string name="directory_not_found">Directory not found.</string>
    <string name="erro_save_preset">Can\'t save the setup.</string>
    <string name="save_canceled">Save process canceled.</string>
    <string name="save_replace">There is already a file with this name, do you want to replace it?</string>
    <string name="save_preset">Save the current file?</string>
    <string name="save_preset_title">Saving a New File</string>
    <string name="clear_warning">Are you sure you want clear all Preset tones? Unsaved changes will be discarted.</string>
    <string name="untitled">Untitled</string>
    <string name="status_send"><![CDATA[Enviado: [ CC = %03d | VL = %03d ] -> CH%02d]]></string>
    <string name="status_erro"><![CDATA[Falhado: [ CC = %03d | VL = %03d ] -> CH%02d (%s)]]></string>
    <string name="special_character">Special characters are not allowed in preset name.</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="requires_version">\"Requires version \"</string>
    <string name="load_sucessfull">Load Successful</string>
    <string name="file_corrupt">The file is corrupted</string>
    <string name="unknow_erro">Unknow erro</string>
    <string name="connection_erro">Connection erro.</string>
    <string name="connection_sucess">Connection success</string>
    <string name="disconnection_erro">Disconnection erro</string>
    <string name="disconnection_sucess">Disconnection success</string>
    <string name="connected_up">CONNECTED</string>
    <string name="not_connected_up">NOT CONNECTED</string>
    <string name="preset_cleaned">Preset Cleaned</string>
    <string name="set_sensibility">Pedal sensibility set to x</string>

    <string name="gate">Gate</string>
    <string name="in">IN</string>
    <string name="warning">WARNING</string>
    <string name="cancel">NO</string>
    <string name="confirm">YES</string>
    <string name="rename">RENAME</string>
    <string name="rack_name">RACK NAME</string>
    <string name="new_rack">NEW</string>
    <string name="rack">RACK</string>
    <string name="init">INIT</string>
    <string name="edit_name">edit name</string>
    <string name="edit_color">edit color</string>
    <string name="midi_config">MIDI CONFIG</string>
    <string name="add_kontroller">ADD COMPONENT</string>
    <string name="delete_rack">delete rack</string>
    <string name="rack_color">RACK COLOR</string>
    <string name="background">BACKGROUND</string>
    <string name="foreground">FOREGROUND</string>
    <string name="configs">BACK</string>
    <string name="delete_component">Are you sure you want to delete this component? any changes made and unsaved will be lost</string>
    <string name="new_potentiometer">NEW POTENTIOMETER</string>
    <string name="new_button">NEW BUTTON</string>

    <string name="values">VALUES</string>
    <string name="disconnected">DESCONECTED</string>
    <string name="aplicar">apply</string>
    <string name="component_number">COMPONENT NUMBER</string>
    <string name="hold_mode_off">Hold Mode Off</string>
    <string name="hold_mode_on">Hold Mode On</string>
    <string name="kontrol">Kontrol</string>

    <string name="component">COMPONENT</string>
    <string name="potentiometer_config">POTENTIOMETER CONFIG</string>
    <string name="knob_style">KNOB STYLE</string>
    <string name="markers_style">MARKERS STYLE</string>
    <string name="apply">APPLY</string>
    <string name="NUMBER">NUMBER</string>
    <string name="list_picker">LIST PICKER</string>
    <string name="name">Name</string>
    <string name="message_delete_rack">You want to delete this rack? All no saved changes are lose.</string>
    <string name="title_delete_rack">Delete Rack</string>
    <string name="push_button_config">PUSH BUTTON CONFIG</string>
    <string name="push_button_style">PUSH BUTTON STYLE</string>
    <string name="open_rack">Open Rack</string>
    <string name="save_rack">Save Rack</string>
    <string name="file_name">FILE NAME</string>
    <string name="max_number_racks_reached">Maximum number of Racks reached.</string>
    <string name="add_rack">ADD RACK</string>
    <string name="new_empty_rack">NEW EMPTY RACK</string>
    <string name="new_slider">NEW SLIDER</string>
</resources>