<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Connection_Main"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="15dp">

    <com.firmino.rigkontrol.kinterface.views.KTitle
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:k_title="@string/connection"
        app:k_icon="@drawable/ic_usb"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_dialog"
        android:backgroundTint="@android:color/black"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_left_borderless"
            android:backgroundTint="@color/dark_foreground"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/usb_status"
            android:textColor="@color/foreground"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Connection_USB_Status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <com.firmino.rigkontrol.kinterface.views.KNumberPicker
        android:id="@+id/Connection_Channel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        app:k_number_picker_min_value="1"
        app:k_number_picker_max_value="16"
        app:k_number_picker_value="1"
        app:k_number_picker_title="@string/midi_channel"/>

    <com.firmino.rigkontrol.kinterface.views.KButton
        android:id="@+id/Connection_Connect"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/connect"/>

</LinearLayout>